@@ -8,6 +8,8 @@ jobs:
 
   validate-pull:
     runs-on: ubuntu-latest
+    outputs:
+      build: ${{ steps.list-changes.outputs.build }}
     steps:
 
       - name: Display Refs
@@ -29,13 +31,29 @@ jobs:
           ref: ${{ github.event.pull_request.head.ref }}
           repository: ${{ github.event.pull_request.head.repo.full_name }}
 
+      - name: Get changes
+        id: get-changes
+        run: echo "files=$(git diff --name-only HEAD^ | xargs)" >> $GITHUB_OUTPUT
+
+      - name: List changed files
+        id: list-changes
+        run: |
+            for file in ${{ steps.get-changes.outputs.files }}; do
+                if [[ $file =~ ^(defaults|fonts|modules|kometa.py|requirements.txt|.dockerignore|Dockerfile).*$ ]] ; then
+                    echo "$file will trigger docker build"
+                    echo "build=true" >> $GITHUB_OUTPUT
+                else
+                    echo "$file will not trigger docker build"
+                fi
+            done
+
       - name: Run Spellcheck
         uses: rojopolis/spellcheck-github-actions@0.38.0
 
   docker-build-pull:
     runs-on: ubuntu-latest
     needs: [ validate-pull ]
-    if: contains(github.event.pull_request.labels.*.name, 'docker') || contains(github.event.pull_request.labels.*.name, 'tester')
+    if: needs.verify-changes.outputs.build == 'true' && (contains(github.event.pull_request.labels.*.name, 'docker') || contains(github.event.pull_request.labels.*.name, 'tester'))
     outputs:
       commit-msg: ${{ steps.update-version.outputs.commit-msg }}
       version: ${{ steps.update-version.outputs.version }}
@@ -53,6 +71,7 @@ jobs:
       - name: Check Out Repo
         uses: actions/checkout@v4
         with:
+          token: ${{ secrets.PAT }}
           ref: ${{ github.event.pull_request.head.ref }}
           repository: ${{ github.event.pull_request.head.repo.full_name }}
 
@@ -170,22 +189,22 @@ jobs:
       - name: Get Description
         id: get-description
         run: |
-          body="${{ github.event.pull_request.body }}"
-          body=$(echo "$body" | sed -n '/## Description/,/## Issues Fixed or Closed/{/## Description/b;/## Issues Fixed or Closed/b;p}')
+          body='${{ github.event.pull_request.body }}'
+          body=$(echo "$body" | sed -n '/## Description/,/##/{/## Description/b;/##/b;p}')
           body=$(echo $body|tr -d '\n')
-          echo "description=$body" >> $GITHUB_OUTPUT
+          echo 'description=$body' >> $GITHUB_OUTPUT
 
       - name: Discord Testers Notification
         uses: Kometa-Team/discord-notifications@master
         with:
           webhook_id_token: ${{ secrets.TESTERS_WEBHOOK }}
-          message: "The Kometa team are requesting <@&917323027438510110> to assist with testing an upcoming feature/bug fix.
+          message: 'The Kometa team are requesting <@&917323027438510110> to assist with testing an upcoming feature/bug fix.
 
                     * For Local Git pull and checkout the `${{ github.event.pull_request.head.ref }}` branch${{ needs.docker-build-pull.outputs.extra-text }}
 
                     * For Docker use the `kometateam/kometa:${{ needs.docker-build-pull.outputs.tag-name }}` image to do your testing
 
-                    Please report back either here or on the original GitHub Pull Request"
+                    Please report back either here or on the original GitHub Pull Request'
           title: ${{ github.event.pull_request.title }}
           description: ${{ steps.get-description.outputs.description }}
           url: https://github.com/Kometa-Team/${{ vars.REPO_NAME }}/pull/${{ github.event.number }}
@@ -198,14 +217,14 @@ jobs:
   update-testers:
     runs-on: ubuntu-latest
     needs: [ docker-build-pull ]
-    if: github.event.action == 'synchronize' && github.event.label.name == 'tester'
+    if: github.event.action == 'synchronize' && contains(github.event.pull_request.labels.*.name, 'tester')
     steps:
 
       - name: Discord Testers Notification
         uses: Kometa-Team/discord-notifications@master
         with:
           webhook_id_token: ${{ secrets.TESTERS_WEBHOOK }}
-          message: "New Commit Pushed to `${{ needs.docker-build-pull.outputs.tag-name }}`: ${{ needs.docker-build-pull.outputs.version }}"
+          message: 'New Commit Pushed to `${{ needs.docker-build-pull.outputs.tag-name }}`: ${{ needs.docker-build-pull.outputs.version }}'
           description: ${{ needs.docker-build-pull.outputs.commit-msg }}
           url: https://github.com/Kometa-Team/${{ vars.REPO_NAME }}/pull/${{ github.event.number }}
           color: ${{ vars.COLOR_SUCCESS }}
